--- a/applications/Cloudflare WARP Launcher.app/Contents/Info.plist
+++ b/applications/Cloudflare WARP Launcher.app/Contents/Info.plist
@@ -34,11 +34,11 @@
 	<key>CFBundleIconFile</key>
 	<string>ApplicationStub</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.apple.automator.Cloudflare-WARP-Launcher</string>
+	<string>com.apple.automator.Cloudflare-WARP-Launcher-copy-2</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Cloudflare WARP Launcher</string>
+	<string>Cloudflare WARP Launcher copy 2</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
